--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
         </div>
     </section>
     <section class="service">
-        <div class="row">
-            <div class="col-lg-6 box">
+            <div class="box1">
                 <div class="content-box">
                     <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
                     <h1>Tư vấn thuế</h1>
@@ -162,17 +161,16 @@
                     <a href="detailnews.html">Xem thêm <i class="fa-solid fa-caret-right fa-xs" style="color: #039d01;"></i></a>
                 </div>
             </div>
-            <div class="col-lg-6 box">
+            <div class="box2">
                 <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
             </div>
         </div>
     </section>
     <section class="service">
-        <div class="row">
-            <div class="col-lg-6 box">
+            <div class="box2">
                 <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
             </div>
-            <div class="col-lg-6">
+            <div class="box1">
                 <div class="content-box">
                     <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
                     <h1>Tư vấn thuế</h1>
@@ -185,39 +183,37 @@
         </div>
     </section>
     <section class="service">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="content-box">
-                    <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
-                    <h1>Tư vấn thuế</h1>
-                    <div class="titles">Dịch vụ tư vấn thuế của chúng tôi giúp khách hàng luôn vững tin và chủ động đối
-                        với các chính sách thuế, hỗ trợ khách hàng quản lý thuế rõ ràng, minh bạch và phù hợp chuẩn mực
-                        đạo đức.</div>
-                    <a href="detailnews.html">Xem thêm <i class="fa-solid fa-caret-right fa-xs" style="color: #039d01;"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-6 box">
-                <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
+        <div class="box1">
+            <div class="content-box">
+                <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
+                <h1>Tư vấn thuế</h1>
+                <div class="titles">Dịch vụ tư vấn thuế của chúng tôi giúp khách hàng luôn vững tin và chủ động đối
+                    với các chính sách thuế, hỗ trợ khách hàng quản lý thuế rõ ràng, minh bạch và phù hợp chuẩn mực
+                    đạo đức.</div>
+                <a href="detailnews.html">Xem thêm <i class="fa-solid fa-caret-right fa-xs" style="color: #039d01;"></i></a>
             </div>
         </div>
-    </section>
-    <section class="service">
-        <div class="row">
-            <div class="col-lg-6 box">
-                <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
-            </div>
-            <div class="col-lg-6">
-                <div class="content-box">
-                    <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
-                    <h1>Tư vấn thuế</h1>
-                    <div class="titles">Dịch vụ tư vấn thuế của chúng tôi giúp khách hàng luôn vững tin và chủ động đối
-                        với các chính sách thuế, hỗ trợ khách hàng quản lý thuế rõ ràng, minh bạch và phù hợp chuẩn mực
-                        đạo đức.</div>
-                    <a href="detailnews.html">Xem thêm <i class="fa-solid fa-caret-right fa-xs" style="color: #039d01;"></i></a>
-                </div>
+        <div class="box2">
+            <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
+        </div>
+    </div>
+</section>
+<section class="service">
+        <div class="box2">
+            <img src="image/medium-shot-business-partners-reviewing-documentation-office-194.jpg" alt="">
+        </div>
+        <div class="box1">
+            <div class="content-box">
+                <p>GIẢI PHÁP DÀNH CHO DOANH NGHIỆP</p>
+                <h1>Tư vấn thuế</h1>
+                <div class="titles">Dịch vụ tư vấn thuế của chúng tôi giúp khách hàng luôn vững tin và chủ động đối
+                    với các chính sách thuế, hỗ trợ khách hàng quản lý thuế rõ ràng, minh bạch và phù hợp chuẩn mực
+                    đạo đức.</div>
+                <a href="detailnews.html">Xem thêm <i class="fa-solid fa-caret-right fa-xs" style="color: #039d01;"></i></a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
     <section class="news">
         <div class="container">
             <div class="type-title">
